--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with(model: task) do |f| %>
-  
-  <% if task.errors.any? %>
+<%= form_with(model: @task) do |f| %>
+
+   <% if task.errors.any? %>
     <div id="error_explanation">
       <ul>
         <% task.errors.full_messages.each do |msg| %>
@@ -9,6 +9,7 @@
       </ul>
     </div>
   <% end %>
+  
   
   <%= f.label :status, 'ステータス' %>
   <%= f.text_field :status %>
