--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,10 +1,21 @@
-<h1>タスク一覧</h1>
- <%= link_to 'Sign up now!', signup_path %>
+<% if logged_in? %>
+  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+    <%= link_to 'Logout', logout_path, method: :delete %>
+  <div>
+    <%= render 'form', task: @task %>
+  </div>
+  <div>
+    <%= render 'tasks/tasks', tasks: @tasks %>
+  </div>
 
-<ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> :<%= task.status %> &gt; <%= task.content %></li>
-  <% end %>
-</ul>
-
-<%= link_to '新規タスクの投稿', new_task_path %>
+<% else %>
+  <div>
+    <div>
+      <h1>TASK LIST</h1>
+        <ul>
+          <li><%= link_to 'Sign up now!', signup_path %></li>
+          <li><%= link_to 'Login', login_path %></li>
+        </ul>
+    </div>
+  </div>
+<% end %>
