--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,9 @@
-<h1>id: <%= @task.id %> のタスク詳細ページ</h1>
+<h1>ユーザー名：<%= current.user.name %></h1>
+<h2>id: <%= @task.id %> のタスク詳細ページ</h2>
 
 <p>ステータス： <%= @task.status %></p>
 <p>タスク：<%= @task.content %></p>
 
-<%= link_to '一覧に戻る', tasks_path %>
-<%= link_to 'このタスクを編集する', edit_task_path(@task) %>
-<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+<%= link_to '一覧に戻る', root_path %>
+<%= link_to '編集', edit_task_path(@task) %>
+<%= link_to '削除', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
