--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
-<div class="text-center">
+<h1><%= link_to 'TASKLIST', root_path %></h1>
+<div>
   <h1>Sign up</h1>
 </div>
 
@@ -10,25 +11,25 @@
 
       <div>
         <%= f.label :name, 'Name' %>
-        <%= f.text_field :name, class: 'form-control' %>
+        <%= f.text_field :name %>
       </div>
 
       <div>
         <%= f.label :email, 'Email' %>
-        <%= f.email_field :email, class: 'form-control' %>
+        <%= f.email_field :email %>
       </div>
 
       <div>
         <%= f.label :password, 'Password' %>
-        <%= f.password_field :password, class: 'form-control' %>
+        <%= f.password_field :password %>
       </div>
 
       <div>
         <%= f.label :password_confirmation, 'Confirmation' %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <%= f.password_field :password_confirmation %>
       </div>
 
-      <%= f.submit 'Sign up', class: 'btn btn-primary w-100' %>
+      <%= f.submit 'Sign up' %>
     <% end %>
   </div>
 </div>
