--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,4 @@
-<h1>ユーザー名：<%= current.user.name %></h1>
+<h1>ユーザー名：<%= current_user.name %></h1>
 <h2>id: <%= @task.id %> のタスク詳細ページ</h2>
 
 <p>ステータス： <%= @task.status %></p>
